# portfolio

./: .gitignore  Cargo.toml  ReadMe.md  iq_report_save_all.json  load_data_commands
.sqlx/: query-75344b755f61ff5a4a1de9e5b2fd2d4c98ddea6a71278ca7d633718e2786c54c.json  query-9a865803e603f859bd4930ec9134d209211791a01413faf0a11867007f9f474e.json
examples/: dividends_example.rs  ticker_news.rs  tickers_example.rs
examples/orm_example/: config.rs  main.rs  read_history_orm.rs
examples/orm_example/entities/: account_history.rs  account_history_normalized.rs  account_history_source_file.rs  account_positions_dividends.rs  account_positions_normalized.rs  account_positions_overview.rs  blue_chips.rs  chart_data.rs  iq_report.rs  mod.rs
migrations/: 0001_account_history.sql  0001_accounts_history.sql  0002_account_activity_view.sql  0002_account_history_normalized_view.sql  0002_accounts_view.sql  0003_account_positions.sql  0003_accounts_positions.sql  0004_account_positions_normalized_view.sql  0004_account_positions_view.sql  0005_blue_chips.sql  0006_chart_data.sql  0007_iq_report.sql  0008_iq_report_view.sql  0009_activity_views.sql  0009_stock_activity_summary.sql  0010_total_gain_percentage_view.sql  0011_calculate_annualized_return_function.sql
src/: account_history.rs  account_positions.rs  blue_chips.rs  chart_data.rs  commands.rs  config.rs  csv_filter.rs  data_filter.rs  date_format.rs  dbconfig.rs  decimal_formats.rs  iq_report.rs  main.rs  positions.rs
src/chart_data/: extract_data.rs  mod.rs
src/rate_of_returns/: mod.rs  read_history.rs
