[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
#chrono = "0.4.29"
csv = "1.2.2"
futures = "0.3"
rust_decimal = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.4.0"
sqlx = { version = "0.7.1", features = [ "mysql", "runtime-tokio-native-tls", "rust_decimal", "time" ] }
structopt = "0.3"
time = { version = "0.3.28", features = ["serde", "parsing"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
toml = "0.7.6"
